--- a/13-Http server/package.json
+++ b/13-Http server/package.json
@@ -29,10 +29,12 @@
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
     "prettier": "2.7.1",
+    "prisma": "^4.4.0",
     "supertest": "^6.3.0",
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@prisma/client": "^4.4.0",
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "ts-jest": "^29.0.3"
