--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "supertest": "^6.3.0"
   },
   "devDependencies": {
-    "jest": "^29.1.2"
+    "jest": "^29.1.2",
+    "prisma": "^4.4.0"
   }
 }
